oip-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oip
  labels:
    app: oip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oip
  template:
    metadata:
      labels:
        app: oip
    spec:
      containers:
      - name: angular-webapp
        image: socialalphaoip/angular-webapp:dev
        ports:
          - containerPort: 80
            protocol: TCP
      - name: auth-microservice
        image: socialalphaoip/auth-microservice:dev
        ports:
          - containerPort: 3000
            protocol: TCP
      - name: elasticsearch-microservice
        image: socialalphaoip/elasticsearch-microservice:dev
        ports:
          - containerPort: 8080
            protocol: TCP
      - name: sms-microservice
        image: socialalphaoip/sms-microservice:dev
        ports:
          - containerPort: 8080
            protocol: TCP
      - name: notifications-microservice
        image: socialalphaoip/notifications-microservice:dev
        ports:
          - containerPort: 8080
            protocol: TCP
      - name: minio-microservice
        image: socialalphaoip/minio-microservice:dev
        ports:
          - containerPort: 8080
            protocol: TCP
      - name: user-invite-microservice
        image: socialalphaoip/user-invite-microservice:dev
        ports:
          - containerPort: 8080
            protocol: TCP
      - name: hasura
        image: hasura/graphql-engine:v1.0.0
        ports:
          - containerPort: 8080
            protocol: TCP
