oip.yaml
apiVersion: v1
kind: Service
metadata:
  name: oip-webapp
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: oip-webapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oip-webapp
spec:
  selector:
    matchLabels:
      app: oip-webapp
  replicas: 1
  template:
    metadata:
      labels:
        app: oip-webapp
    spec:
      containers:
      - name: oip-webapp
        image: socialalphaoip/angular-webapp:dev
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: oip-auth
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: oip-auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oip-auth
spec:
  selector:
    matchLabels:
      app: oip-auth
  replicas: 1
  template:
    metadata:
      labels:
        app: oip-auth
    spec:
      containers:
      - name: oip-auth
        image: socialalphaoip/auth-microservice:dev
        ports:
        - containerPort: 3000
---
